# Inspector

./: .gitignore  CMakeLists.txt  main.c
include/: Inspector.h  cs_magic.h  load_commands.h  macho.h  utils.h
source/: CMakeLists.txt  cs_magic.c  load_commands.c  macho.c  utils.c
